// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIEditableTableHead /> composes the className correctly 1`] = `
<thead
  className="xui-editabletablehead test-classname"
>
  <ContextProvider
    value={true}
  />
</thead>
`;

exports[`<XUIEditableTableHead /> renders correctly 1`] = `
<thead
  className="xui-editabletablehead"
>
  <ContextProvider
    value={true}
  >
    <div>
      XUIEditableTableHead
    </div>
  </ContextProvider>
</thead>
`;
